Tue Oct 17 18:40:38 2000  George Lebl <jirka@5z.com>

	* menu.c: Fix cast to BaseP for FooBar on panel removal

Tue Oct 17 18:15:10 2000  George Lebl <jirka@5z.com>

	* basep-widget.c: Fix the recalc on destroy.  /me smacks
	  head against wall for committing a broken thingie.

Tue Oct 17 10:38:49 2000  George Lebl <jirka@5z.com>

	* penel.c, applet.c, basep-widget.c:  cleanup, recalc borders
	  when a border panel is killed.

Sat Oct 14 15:11:24 2000  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c, session.c, panel_config_global.h,
	  panel-widget.[ch]:  Apply patch from Chris Leith <cleith@home.com>
	  to add border padding for applets.  By default this is 0 which
	  was the previous behaviour.  I however did s/applet_applet/applet/
	  on the patch, since we don't want to change current configuration
	  names.

Sat Oct 14 14:17:49 2000  George Lebl <jirka@5z.com>

	* panel_config.c, applet-widget.c, gwmthumbnail.c, panel-util.[ch],
	  panel.c, status-docklet.c:  Random cleanup related to some
	  -pedantic -ansi, also added a no_locale version of strcasecmp
	  and use it appropriately.  Also "localhost.localdomain" is also
	  a local host.

Sat Oct 14 14:50:18 2000  George Lebl <jirka@5z.com>

	* main.c: cleanups, remove unused extern

Fri Oct 13 19:39:53 2000  George Lebl <jirka@5z.com>

	* panel_config_global.h, session.c, gnome-panel-properties.c,
	  basep-widget.c:  add a global option to turn off the collision
	  avoidance (it's on by default of course though)

	* basep-widget.c, foobar-widget.c: panel_list is a GSList not
	  a GList.

Fri Oct 13 17:26:25 2000  George Lebl <jirka@5z.com>

	* aligned-widget.c, basep-widget.[ch], border-widget.h,
	  panel-types.h, edge-widget.c:  Add simple panel collision
	  avoidance.  Bottom/Top panels take preference over left/right
	  panels.  We also assume only 1 panel per position, so we don't
	  overlap only panels at right angles to each other.

Wed Oct 11 18:09:40 2000  George Lebl <jirka@5z.com>
